@@ -1,20 +1,9 @@
 /*
- * Licensed to Elasticsearch under one or more contributor
- * license agreements. See the NOTICE file distributed with
- * this work for additional information regarding copyright
- * ownership. Elasticsearch licenses this file to you under
- * the Apache License, Version 2.0 (the "License"); you may
- * not use this file except in compliance with the License.
- * You may obtain a copy of the License at
- *
- *    http://www.apache.org/licenses/LICENSE-2.0
- *
- * Unless required by applicable law or agreed to in writing,
- * software distributed under the License is distributed on an
- * "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
- * KIND, either express or implied.  See the License for the
- * specific language governing permissions and limitations
- * under the License.
+ * Copyright Elasticsearch B.V. and/or licensed to Elasticsearch B.V. under one
+ * or more contributor license agreements. Licensed under the Elastic License
+ * 2.0 and the Server Side Public License, v 1; you may not use this file except
+ * in compliance with, at your election, the Elastic License 2.0 or the Server
+ * Side Public License, v 1.
  */
 
 package org.elasticsearch.search.aggregations.bucket.composite;
@@ -24,7 +13,6 @@ import org.apache.lucene.index.LeafReaderContext;
 import org.apache.lucene.index.NumericDocValues;
 import org.apache.lucene.index.SortedNumericDocValues;
 import org.apache.lucene.index.SortedSetDocValues;
-import org.apache.lucene.queries.SearchAfterSortedDocQuery;
 import org.apache.lucene.search.BooleanClause;
 import org.apache.lucene.search.BooleanQuery;
 import org.apache.lucene.search.CollectionTerminatedException;
@@ -32,7 +20,7 @@ import org.apache.lucene.search.DocIdSet;
 import org.apache.lucene.search.DocIdSetIterator;
 import org.apache.lucene.search.FieldComparator;
 import org.apache.lucene.search.FieldDoc;
-import org.apache.lucene.search.Query;
+import org.apache.lucene.search.LeafFieldComparator;
 import org.apache.lucene.search.ScoreMode;
 import org.apache.lucene.search.Scorer;
 import org.apache.lucene.search.Sort;
@@ -40,10 +28,17 @@ import org.apache.lucene.search.SortField;
 import org.apache.lucene.search.SortedNumericSelector;
 import org.apache.lucene.search.SortedNumericSortField;
 import org.apache.lucene.search.Weight;
+import org.apache.lucene.search.comparators.LongComparator;
+import org.apache.lucene.util.Bits;
 import org.apache.lucene.util.RoaringDocIdSet;
-import org.elasticsearch.common.lease.Releasables;
+import org.elasticsearch.ElasticsearchParseException;
+import org.elasticsearch.common.Rounding;
+import org.elasticsearch.core.Releasables;
 import org.elasticsearch.index.IndexSortConfig;
+import org.elasticsearch.lucene.queries.SearchAfterSortedDocQuery;
 import org.elasticsearch.search.DocValueFormat;
+import org.elasticsearch.search.aggregations.AggregationExecutionContext;
+import org.elasticsearch.search.aggregations.AggregationExecutionException;
 import org.elasticsearch.search.aggregations.Aggregator;
 import org.elasticsearch.search.aggregations.AggregatorFactories;
 import org.elasticsearch.search.aggregations.BucketCollector;
@@ -54,7 +49,8 @@ import org.elasticsearch.search.aggregations.LeafBucketCollector;
 import org.elasticsearch.search.aggregations.MultiBucketCollector;
 import org.elasticsearch.search.aggregations.MultiBucketConsumerService;
 import org.elasticsearch.search.aggregations.bucket.BucketsAggregator;
-import org.elasticsearch.search.internal.SearchContext;
+import org.elasticsearch.search.aggregations.bucket.histogram.SizedBucketAggregator;
+import org.elasticsearch.search.aggregations.support.AggregationContext;
 import org.elasticsearch.search.searchafter.SearchAfterBuilder;
 import org.elasticsearch.search.sort.SortAndFormats;
 
@@ -65,54 +61,86 @@ import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 import java.util.function.LongUnaryOperator;
-import java.util.stream.Collectors;
 
 import static org.elasticsearch.search.aggregations.MultiBucketConsumerService.MAX_BUCKET_SETTING;
 
-final class CompositeAggregator extends BucketsAggregator {
+public final class CompositeAggregator extends BucketsAggregator implements SizedBucketAggregator {
     private final int size;
     private final List<String> sourceNames;
     private final int[] reverseMuls;
+    private final MissingOrder[] missingOrders;
     private final List<DocValueFormat> formats;
     private final CompositeKey rawAfterKey;
 
     private final CompositeValuesSourceConfig[] sourceConfigs;
     private final SingleDimensionValuesSource<?>[] sources;
     private final CompositeValuesCollectorQueue queue;
+    private final DateHistogramValuesSource[] innerSizedBucketAggregators;
 
     private final List<Entry> entries = new ArrayList<>();
-    private LeafReaderContext currentLeaf;
+    private AggregationExecutionContext currentAggCtx;
     private RoaringDocIdSet.Builder docIdSetBuilder;
     private BucketCollector deferredCollectors;
 
     private boolean earlyTerminated;
 
-    CompositeAggregator(String name, AggregatorFactories factories, SearchContext context, Aggregator parent,
-                        Map<String, Object> metadata,
-                        int size, CompositeValuesSourceConfig[] sourceConfigs, CompositeKey rawAfterKey) throws IOException {
-        super(name, factories, context, parent, CardinalityUpperBound.MANY, metadata);
+    CompositeAggregator(
+        String name,
+        AggregatorFactories factories,
+        AggregationContext aggCtx,
+        Aggregator parent,
+        Map<String, Object> metadata,
+        int size,
+        CompositeValuesSourceConfig[] sourceConfigs,
+        CompositeKey rawAfterKey
+    ) throws IOException {
+        super(name, factories, aggCtx, parent, CardinalityUpperBound.MANY, metadata);
         this.size = size;
-        this.sourceNames = Arrays.stream(sourceConfigs).map(CompositeValuesSourceConfig::name).collect(Collectors.toList());
+        this.sourceNames = Arrays.stream(sourceConfigs).map(CompositeValuesSourceConfig::name).toList();
         this.reverseMuls = Arrays.stream(sourceConfigs).mapToInt(CompositeValuesSourceConfig::reverseMul).toArray();
-        this.formats = Arrays.stream(sourceConfigs).map(CompositeValuesSourceConfig::format).collect(Collectors.toList());
-        this.sources = new SingleDimensionValuesSource[sourceConfigs.length];
+        this.missingOrders = Arrays.stream(sourceConfigs).map(CompositeValuesSourceConfig::missingOrder).toArray(MissingOrder[]::new);
+        this.formats = Arrays.stream(sourceConfigs).map(CompositeValuesSourceConfig::format).toList();
+        this.sources = new SingleDimensionValuesSource<?>[sourceConfigs.length];
         // check that the provided size is not greater than the search.max_buckets setting
-        int bucketLimit = context.aggregations().multiBucketConsumer().getLimit();
+        int bucketLimit = aggCtx.multiBucketConsumer().getLimit();
         if (size > bucketLimit) {
-            throw new MultiBucketConsumerService.TooManyBucketsException("Trying to create too many buckets. Must be less than or equal" +
-                " to: [" + bucketLimit + "] but was [" + size + "]. This limit can be set by changing the [" + MAX_BUCKET_SETTING.getKey() +
-                "] cluster level setting.", bucketLimit);
+            throw new MultiBucketConsumerService.TooManyBucketsException(
+                "Trying to create too many buckets. Must be less than or equal"
+                    + " to: ["
+                    + bucketLimit
+                    + "] but was ["
+                    + size
+                    + "]. This limit can be set by changing the ["
+                    + MAX_BUCKET_SETTING.getKey()
+                    + "] cluster level setting.",
+                bucketLimit
+            );
         }
         this.sourceConfigs = sourceConfigs;
+        List<DateHistogramValuesSource> dateHistogramValuesSources = new ArrayList<>();
         for (int i = 0; i < sourceConfigs.length; i++) {
             this.sources[i] = sourceConfigs[i].createValuesSource(
-                context.bigArrays(),
-                context.searcher().getIndexReader(),
+                aggCtx.bigArrays(),
+                aggCtx.searcher().getIndexReader(),
                 size,
                 this::addRequestCircuitBreakerBytes
             );
+            if (this.sources[i] instanceof DateHistogramValuesSource) {
+                dateHistogramValuesSources.add((DateHistogramValuesSource) this.sources[i]);
+            }
         }
-        this.queue = new CompositeValuesCollectorQueue(context.bigArrays(), sources, size, rawAfterKey);
+        this.innerSizedBucketAggregators = dateHistogramValuesSources.toArray(new DateHistogramValuesSource[0]);
+        this.queue = new CompositeValuesCollectorQueue(aggCtx.bigArrays(), sources, size);
+        if (rawAfterKey != null) {
+            try {
+                this.queue.setAfterKey(rawAfterKey);
+            } catch (IllegalArgumentException ex) {
+                throw new ElasticsearchParseException(
+                    "Cannot set after key in the composite aggregation [" + name + "] - " + ex.getMessage(),
+                    ex
+                );
+            }
+        }
         this.rawAfterKey = rawAfterKey;
     }
 
@@ -121,15 +149,16 @@ final class CompositeAggregator extends BucketsAggregator {
         try {
             Releasables.close(queue);
         } finally {
-            Releasables.close(sources);
+            if (sources != null) {
+                Releasables.close(sources);
+            }
         }
     }
 
     @Override
     protected void doPreCollection() throws IOException {
-        List<BucketCollector> collectors = Arrays.asList(subAggregators);
-        deferredCollectors = MultiBucketCollector.wrap(collectors);
-        collectableSubAggregators = BucketCollector.NO_OP_COLLECTOR;
+        deferredCollectors = MultiBucketCollector.wrap(false, Arrays.asList(subAggregators));
+        collectableSubAggregators = BucketCollector.NO_OP_BUCKET_COLLECTOR;
     }
 
     @Override
@@ -141,7 +170,7 @@ final class CompositeAggregator extends BucketsAggregator {
     public InternalAggregation[] buildAggregations(long[] owningBucketOrds) throws IOException {
         // Composite aggregator must be at the top of the aggregation tree
         assert owningBucketOrds.length == 1 && owningBucketOrds[0] == 0L;
-        if (deferredCollectors != NO_OP_COLLECTOR) {
+        if (deferredCollectors != NO_OP_BUCKET_COLLECTOR) {
             // Replay all documents that contain at least one top bucket (collected during the first pass).
             runDeferredCollections();
         }
@@ -157,33 +186,60 @@ final class CompositeAggregator extends BucketsAggregator {
             int slot = queue.pop();
             CompositeKey key = queue.toCompositeKey(slot);
             InternalAggregations aggs = subAggsForBuckets[slot];
-            int docCount = queue.getDocCount(slot);
-            buckets[queue.size()] = new InternalComposite.InternalBucket(sourceNames, formats, key, reverseMuls, docCount, aggs);
+            long docCount = queue.getDocCount(slot);
+            buckets[queue.size()] = new InternalComposite.InternalBucket(
+                sourceNames,
+                formats,
+                key,
+                reverseMuls,
+                missingOrders,
+                docCount,
+                aggs
+            );
         }
-        CompositeKey lastBucket = num > 0 ? buckets[num-1].getRawKey() : null;
+        CompositeKey lastBucket = num > 0 ? buckets[num - 1].getRawKey() : null;
         return new InternalAggregation[] {
-            new InternalComposite(name, size, sourceNames, formats, Arrays.asList(buckets), lastBucket, reverseMuls,
-                    earlyTerminated, metadata())
-        };
+            new InternalComposite(
+                name,
+                size,
+                sourceNames,
+                formats,
+                Arrays.asList(buckets),
+                lastBucket,
+                reverseMuls,
+                missingOrders,
+                earlyTerminated,
+                metadata()
+            ) };
     }
 
     @Override
     public InternalAggregation buildEmptyAggregation() {
-        return new InternalComposite(name, size, sourceNames, formats, Collections.emptyList(), null, reverseMuls,
-            false, metadata());
+        return new InternalComposite(
+            name,
+            size,
+            sourceNames,
+            formats,
+            Collections.emptyList(),
+            null,
+            reverseMuls,
+            missingOrders,
+            false,
+            metadata()
+        );
     }
 
     private void finishLeaf() {
-        if (currentLeaf != null) {
+        if (currentAggCtx != null) {
             DocIdSet docIdSet = docIdSetBuilder.build();
-            entries.add(new Entry(currentLeaf, docIdSet));
-            currentLeaf = null;
+            entries.add(new Entry(currentAggCtx, docIdSet));
+            currentAggCtx = null;
             docIdSetBuilder = null;
         }
     }
 
     /** Return true if the provided field may have multiple values per document in the leaf **/
-    private boolean isMaybeMultivalued(LeafReaderContext context, SortField sortField) throws IOException {
+    private static boolean isMaybeMultivalued(LeafReaderContext context, SortField sortField) throws IOException {
         SortField.Type type = IndexSortConfig.getSortFieldType(sortField);
         switch (type) {
             case STRING:
@@ -219,11 +275,11 @@ final class CompositeAggregator extends BucketsAggregator {
             SingleDimensionValuesSource<?> source = sources[i];
             SortField indexSortField = indexSort.getSort()[i];
             if (source.fieldType == null
-                    // TODO: can we handle missing bucket when using index sort optimization ?
-                    || source.missingBucket
-                    || indexSortField.getField().equals(source.fieldType.name()) == false
-                    || isMaybeMultivalued(context, indexSortField)
-                    || sourceConfig.hasScript()) {
+                // TODO: can we handle missing bucket when using index sort optimization ?
+                || source.missingBucket
+                || indexSortField.getField().equals(source.fieldType.name()) == false
+                || isMaybeMultivalued(context, indexSortField)
+                || sourceConfig.hasScript()) {
                 break;
             }
 
@@ -288,41 +344,50 @@ final class CompositeAggregator extends BucketsAggregator {
                     }
 
                     @Override
-                    public FieldComparator<?> getComparator(int numHits, int sortPos) {
-                        return new FieldComparator.LongComparator(1, delegate.getField(), (Long) missingValue) {
+                    public FieldComparator<?> getComparator(int numHits, boolean enableSkipping) {
+                        return new LongComparator(1, delegate.getField(), (Long) missingValue, delegate.getReverse(), false) {
                             @Override
-                            protected NumericDocValues getNumericDocValues(LeafReaderContext context, String field) throws IOException {
-                                NumericDocValues dvs =  SortedNumericSelector.wrap(DocValues.getSortedNumeric(context.reader(), field),
-                                    delegate.getSelector(), delegate.getNumericType());
-                                return new NumericDocValues() {
+                            public LeafFieldComparator getLeafComparator(LeafReaderContext context) throws IOException {
+                                return new LongLeafComparator(context) {
                                     @Override
-                                    public long longValue() throws IOException {
-                                        return round.applyAsLong(dvs.longValue());
-                                    }
+                                    protected NumericDocValues getNumericDocValues(LeafReaderContext context, String field)
+                                        throws IOException {
+                                        NumericDocValues dvs = SortedNumericSelector.wrap(
+                                            DocValues.getSortedNumeric(context.reader(), field),
+                                            delegate.getSelector(),
+                                            delegate.getNumericType()
+                                        );
+                                        return new NumericDocValues() {
+                                            @Override
+                                            public long longValue() throws IOException {
+                                                return round.applyAsLong(dvs.longValue());
+                                            }
 
-                                    @Override
-                                    public boolean advanceExact(int target) throws IOException {
-                                        return dvs.advanceExact(target);
-                                    }
+                                            @Override
+                                            public boolean advanceExact(int target) throws IOException {
+                                                return dvs.advanceExact(target);
+                                            }
 
-                                    @Override
-                                    public int docID() {
-                                        return dvs.docID();
-                                    }
+                                            @Override
+                                            public int docID() {
+                                                return dvs.docID();
+                                            }
 
-                                    @Override
-                                    public int nextDoc() throws IOException {
-                                        return dvs.nextDoc();
-                                    }
+                                            @Override
+                                            public int nextDoc() throws IOException {
+                                                return dvs.nextDoc();
+                                            }
 
-                                    @Override
-                                    public int advance(int target) throws IOException {
-                                        return dvs.advance(target);
-                                    }
+                                            @Override
+                                            public int advance(int target) throws IOException {
+                                                return dvs.advance(target);
+                                            }
 
-                                    @Override
-                                    public long cost() {
-                                        return dvs.cost();
+                                            @Override
+                                            public long cost() {
+                                                return dvs.cost();
+                                            }
+                                        };
                                     }
                                 };
                             }
@@ -341,66 +406,86 @@ final class CompositeAggregator extends BucketsAggregator {
         for (int i = 0; i < formats.length; i++) {
             formats[i] = sources[i].format;
         }
-        FieldDoc fieldDoc = SearchAfterBuilder.buildFieldDoc(new SortAndFormats(indexSortPrefix, formats),
-            Arrays.copyOfRange(rawAfterKey.values(), 0, formats.length));
+        FieldDoc fieldDoc = SearchAfterBuilder.buildFieldDoc(
+            new SortAndFormats(indexSortPrefix, formats),
+            Arrays.copyOfRange(rawAfterKey.values(), 0, formats.length),
+            null
+        );
         if (indexSortPrefix.getSort().length < sources.length) {
             // include all docs that belong to the partial bucket
             fieldDoc.doc = -1;
         }
-        BooleanQuery newQuery = new BooleanQuery.Builder()
-            .add(context.query(), BooleanClause.Occur.MUST)
+        BooleanQuery newQuery = new BooleanQuery.Builder().add(topLevelQuery(), BooleanClause.Occur.MUST)
             .add(new SearchAfterSortedDocQuery(applySortFieldRounding(indexSortPrefix), fieldDoc), BooleanClause.Occur.FILTER)
             .build();
-        Weight weight = context.searcher().createWeight(context.searcher().rewrite(newQuery), ScoreMode.COMPLETE_NO_SCORES, 1f);
+        Weight weight = searcher().createWeight(searcher().rewrite(newQuery), ScoreMode.COMPLETE_NO_SCORES, 1f);
         Scorer scorer = weight.scorer(ctx);
         if (scorer != null) {
             DocIdSetIterator docIt = scorer.iterator();
-            final LeafBucketCollector inner = queue.getLeafCollector(ctx,
-                getFirstPassCollector(docIdSetBuilder, indexSortPrefix.getSort().length));
+            final LeafBucketCollector inner = queue.getLeafCollector(
+                ctx,
+                getFirstPassCollector(docIdSetBuilder, indexSortPrefix.getSort().length)
+            );
             inner.setScorer(scorer);
+            final Bits liveDocs = ctx.reader().getLiveDocs();
             while (docIt.nextDoc() != DocIdSetIterator.NO_MORE_DOCS) {
-                inner.collect(docIt.docID());
+                if (liveDocs == null || liveDocs.get(docIt.docID())) {
+                    inner.collect(docIt.docID());
+                }
             }
         }
     }
 
     @Override
-    protected LeafBucketCollector getLeafCollector(LeafReaderContext ctx, LeafBucketCollector sub) throws IOException {
+    protected LeafBucketCollector getLeafCollector(AggregationExecutionContext aggCtx, LeafBucketCollector sub) throws IOException {
         finishLeaf();
 
-        boolean fillDocIdSet = deferredCollectors != NO_OP_COLLECTOR;
+        boolean fillDocIdSet = deferredCollectors != NO_OP_BUCKET_COLLECTOR;
 
-        Sort indexSortPrefix = buildIndexSortPrefix(ctx);
+        Sort indexSortPrefix = buildIndexSortPrefix(aggCtx.getLeafReaderContext());
         int sortPrefixLen = computeSortPrefixLen(indexSortPrefix);
 
-        SortedDocsProducer sortedDocsProducer = sortPrefixLen == 0  ?
-            sources[0].createSortedDocsProducerOrNull(ctx.reader(), context.query()) : null;
+        SortedDocsProducer sortedDocsProducer = (sortPrefixLen == 0 && parent == null)
+            ? sources[0].createSortedDocsProducerOrNull(aggCtx.getLeafReaderContext().reader(), topLevelQuery())
+            : null;
         if (sortedDocsProducer != null) {
             // Visit documents sorted by the leading source of the composite definition and terminates
             // when the leading source value is guaranteed to be greater than the lowest composite bucket
             // in the queue.
-            DocIdSet docIdSet = sortedDocsProducer.processLeaf(context.query(), queue, ctx, fillDocIdSet);
+            DocIdSet docIdSet = sortedDocsProducer.processLeaf(topLevelQuery(), queue, aggCtx.getLeafReaderContext(), fillDocIdSet);
             if (fillDocIdSet) {
-                entries.add(new Entry(ctx, docIdSet));
+                entries.add(new Entry(aggCtx, docIdSet));
             }
             // We can bypass search entirely for this segment, the processing is done in the previous call.
             // Throwing this exception will terminate the execution of the search for this root aggregation,
             // see {@link MultiCollector} for more details on how we handle early termination in aggregations.
             earlyTerminated = true;
-            throw new CollectionTerminatedException();
+            return LeafBucketCollector.NO_OP_COLLECTOR;
         } else {
             if (fillDocIdSet) {
-                currentLeaf = ctx;
-                docIdSetBuilder = new RoaringDocIdSet.Builder(ctx.reader().maxDoc());
+                currentAggCtx = aggCtx;
+                docIdSetBuilder = new RoaringDocIdSet.Builder(aggCtx.getLeafReaderContext().reader().maxDoc());
             }
             if (rawAfterKey != null && sortPrefixLen > 0) {
                 // We have an after key and index sort is applicable so we jump directly to the doc
                 // that is after the index sort prefix using the rawAfterKey and we start collecting
                 // document from there.
-                processLeafFromQuery(ctx, indexSortPrefix);
-                throw new CollectionTerminatedException();
+                try {
+                    processLeafFromQuery(aggCtx.getLeafReaderContext(), indexSortPrefix);
+                } catch (CollectionTerminatedException e) {
+                    /*
+                     * Signal that there isn't anything to collect. We're going
+                     * to return noop collector anyway so we can ignore it.
+                     */
+                }
+                return LeafBucketCollector.NO_OP_COLLECTOR;
             } else {
-                final LeafBucketCollector inner = queue.getLeafCollector(ctx, getFirstPassCollector(docIdSetBuilder, sortPrefixLen));
+                final LeafBucketCollector inner;
+                try {
+                    inner = queue.getLeafCollector(aggCtx.getLeafReaderContext(), getFirstPassCollector(docIdSetBuilder, sortPrefixLen));
+                } catch (CollectionTerminatedException e) {
+                    return LeafBucketCollector.NO_OP_COLLECTOR;
+                }
                 return new LeafBucketCollector() {
                     @Override
                     public void collect(int doc, long zeroBucket) throws IOException {
@@ -422,7 +507,8 @@ final class CompositeAggregator extends BucketsAggregator {
             @Override
             public void collect(int doc, long bucket) throws IOException {
                 try {
-                    if (queue.addIfCompetitive(indexSortPrefix)) {
+                    int docCount = docCountProvider.getDocCount(doc);
+                    if (queue.addIfCompetitive(indexSortPrefix, docCount)) {
                         if (builder != null && lastDoc != doc) {
                             builder.add(doc);
                             lastDoc = doc;
@@ -444,8 +530,7 @@ final class CompositeAggregator extends BucketsAggregator {
         final boolean needsScores = scoreMode().needsScores();
         Weight weight = null;
         if (needsScores) {
-            Query query = context.query();
-            weight = context.searcher().createWeight(context.searcher().rewrite(query), ScoreMode.COMPLETE, 1f);
+            weight = searcher().createWeight(searcher().rewrite(topLevelQuery()), ScoreMode.COMPLETE, 1f);
         }
         deferredCollectors.preCollection();
         for (Entry entry : entries) {
@@ -453,11 +538,14 @@ final class CompositeAggregator extends BucketsAggregator {
             if (docIdSetIterator == null) {
                 continue;
             }
-            final LeafBucketCollector subCollector = deferredCollectors.getLeafCollector(entry.context);
-            final LeafBucketCollector collector = queue.getLeafCollector(entry.context, getSecondPassCollector(subCollector));
+            final LeafBucketCollector subCollector = deferredCollectors.getLeafCollector(entry.aggCtx);
+            final LeafBucketCollector collector = queue.getLeafCollector(
+                entry.aggCtx.getLeafReaderContext(),
+                getSecondPassCollector(subCollector)
+            );
             DocIdSetIterator scorerIt = null;
             if (needsScores) {
-                Scorer scorer = weight.scorer(entry.context);
+                Scorer scorer = weight.scorer(entry.aggCtx.getLeafReaderContext());
                 if (scorer != null) {
                     scorerIt = scorer.iterator();
                     subCollector.setScorer(scorer);
@@ -495,14 +583,37 @@ final class CompositeAggregator extends BucketsAggregator {
         };
     }
 
+    @Override
+    public double bucketSize(long bucket, Rounding.DateTimeUnit unit) {
+        if (innerSizedBucketAggregators.length != 1) {
+            throw new AggregationExecutionException(
+                "aggregation ["
+                    + name()
+                    + "] does not have exactly one date_histogram value source; exactly one is required when using with rate aggregation"
+            );
+        }
+        return innerSizedBucketAggregators[0].bucketSize(bucket, unit);
+    }
+
+    @Override
+    public double bucketSize(Rounding.DateTimeUnit unit) {
+        if (innerSizedBucketAggregators.length != 1) {
+            throw new AggregationExecutionException(
+                "aggregation ["
+                    + name()
+                    + "] does not have exactly one date_histogram value source; exactly one is required when using with rate aggregation"
+            );
+        }
+        return innerSizedBucketAggregators[0].bucketSize(unit);
+    }
+
     private static class Entry {
-        final LeafReaderContext context;
+        final AggregationExecutionContext aggCtx;
         final DocIdSet docIdSet;
 
-        Entry(LeafReaderContext context, DocIdSet docIdSet) {
-            this.context = context;
+        Entry(AggregationExecutionContext aggCtx, DocIdSet docIdSet) {
+            this.aggCtx = aggCtx;
             this.docIdSet = docIdSet;
         }
     }
 }
-
